# cat-noodle

./: .gitignore  Cargo.toml
src/: game.rs  level.txt  lib.rs  main.rs  math.rs  renderer.rs  rgl.rs  sprite.frag  sprite.vert
src/game/: physics.rs  renderer.rs  sprite.frag  state.rs
src/game/physics/: noodle_cat.rs
src/game/renderer/: debug.frag  debug.rs  debug.vert  ground.rs  gui.rs  noodle_cat.rs  text.rs  vertex.rs
src/renderer/: noodle_cat.rs  vertex.rs
