[package]
name = "cat-noodle"
version = "0.1.0"
authors = ["Fryer <Fryer@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
glfw = "0.34.0"
gl = "0.14.0"
image = "0.22.3"
wrapped2d = "0.4.0"
freetype-rs = "0.23.0"
harfbuzz_rs = "1.0.1"

[patch.crates-io]
harfbuzz-sys = { path = 'deps/harfbuzz-sys' }

[lib]
name="lib"
